kubernetes/apps/monitoring/templates/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: monitoring
  namespace: monitoring
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
